первый список проектов

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 
 <h1>Начнем!</h1>
 
+<h2>Список проектов</h2>
+<ol>
+  <li><a href="https://cooltolia.github.io/gllacy/">Gllacy</a></li>
+  <li><a href="https://cooltolia.github.io/sedona/"></a>Sedona</li>
+  <li><a href="https://cooltolia.github.io/fooseshoes/"></a>Fooseshoes</li>
+  <li><a href="https://cooltolia.github.io/disney/"></a>Disney</li>
+  <li><a href="https://cooltolia.github.io/mishka/">Mishka</a></li>
+</ol>
 </body>
 
 </html>
